--- a/activar/product.html
+++ b/activar/product.html
@@ -40,11 +40,10 @@
                 </a>
             </div>
             <div class="top-social">
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
             </div>
             <div class="container">
                 <div class="nav-menu">
@@ -163,7 +162,7 @@
                             <div class="gi-hover">
                                 <a href="img/Product/nuocsucmieng.png" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
-                                <a href="http://www.traphaco.com.vn/vi/san-pham/62-nuoc-suc-mieng-t-b.html"><i
+                                <a href="https://tiki.vn/combo-2-nuoc-suc-mieng-huong-bac-ha-listerine-cool-mint-750ml-chai-p554282.html?src=search&2hi=0&keyword=n%C6%B0%E1%BB%9Bc%20s%C3%BAc%20mi%E1%BB%87ng&_lc=Vk4wMzQwMTMwMDM%3D"><i
                                         class="fa fa-chain"></i></a>
                                 <h6>Nước súc miệng</h6>
                             </div>
@@ -191,11 +190,10 @@
                             dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
                         <div class="social-links">
                             <h6>Follow us</h6>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -226,17 +224,17 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                038.642.5197
+                                None
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                preventcovid_19@gmail.com
+                                None
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
                                 <span>Địa chỉ:</span>
-                                Số 1, Đê La Thành, Hà Nội
+                                Tầng 2,29T1, Hoàng Đạo Thúy, Hà Nội
                             </li>
                         </ul>
                     </div>
