--- a/activar/test4.html
+++ b/activar/test4.html
@@ -40,11 +40,10 @@
             </a>
         </div>
         <div class="top-social">
-            <a href="#"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#"><i class="fa fa-linkedin"></i></a>
-            <a href="#"><i class="fa fa-pinterest-p"></i></a>
-            <a href="#"><i class="fa fa-youtube-play"></i></a>
-            <a href="#"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
         </div>
         <div class="container">
             <div class="nav-menu">
@@ -278,11 +277,10 @@
                             dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
                         <div class="social-links">
                             <h6>Follow us</h6>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-google-plus"></i></a>
-                            <a href="#"><i class="fa fa-linkedin"></i></a>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -305,7 +303,7 @@
                         </div>
                     </div>
                 </div>
-               
+
                 <div class="col-lg-3">
                     <div class="footer-widget">
                         <h5>Liên hệ:</h5>
@@ -313,24 +311,24 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                038.642.5197
+                                None
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                preventcovid_19@gmail.com
+                                None
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
                                 <span>Địa chỉ:</span>
-                                Số 1, Đê La Thành, Hà Nội
+                                Tầng 2,29T1, Hoàng Đạo Thúy, Hà Nội
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        
+
     </footer>
     <!-- Footer Section End -->
 
