--- a/activar/thông tin.html
+++ b/activar/thông tin.html
@@ -39,11 +39,10 @@
                 </a>
             </div>
             <div class="top-social">
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
-                <a href="#"><i class="fa fa-pinterest-p"></i></a>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
-                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
             </div>
             <div class="container">
                 <div class="nav-menu">
@@ -176,77 +175,75 @@
         </section>
         <!-- Testimonial Section End -->
 
-        <!-- Footer Section Begin -->
-        <footer class="footer-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-3">
-                        <div class="footer-logo-item">
-                            <div class="f-logo">
-                                <!-- LOGO -->
-                                <a href="home.html"><img src="img/LOGO_2.png" alt=""></a>
-                                <!-- LOGO -->
-                            </div>
-                            <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục
-                                về
-                                dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
-                            <div class="social-links">
-                                <h6>Follow us</h6>
-                                <a href="#"><i class="fa fa-facebook"></i></a>
-                                <a href="#"><i class="fa fa-twitter"></i></a>
-                                <a href="#"><i class="fa fa-google-plus"></i></a>
-                                <a href="#"><i class="fa fa-linkedin"></i></a>
-                                <a href="#"><i class="fa fa-instagram"></i></a>
-                            </div>
+    <!-- Footer Section Begin -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="footer-logo-item">
+                        <div class="f-logo">
+                            <!-- LOGO -->
+                            <a href="home.html"><img src="img/LOGO_2.png" alt=""></a>
+                            <!-- LOGO -->
                         </div>
-                    </div>
-                    <div class="col-lg-3 offset-lg-1">
-                        <div class="footer-widget">
-                            <h5>Các bài viết</h5>
-                            <div class="footer-blog">
-                                <a href="phòng chống.html" class="fb-item">
-                                    <h6>Cách hiệu quả phòng chống bệnh</h6>
-                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
-                                </a>
-                                <a href="phòng chống.html" class="fb-item">
-                                    <h6>Làm sao để tránh bị ốm?</h6>
-                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
-                                </a>
-                                <a href="phòng chống.html" class="fb-item">
-                                    <h6>Làm sao để vượt qua stress ? </h6>
-                                    <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-3">
-                        <div class="footer-widget">
-                            <h5>Liên hệ:</h5>
-                            <ul class="footer-info">
-                                <li>
-                                    <i class="fa fa-phone"></i>
-                                    <span>Số điện thoại:</span>
-                                    038.642.5197
-                                </li>
-                                <li>
-                                    <i class="fa fa-envelope-o"></i>
-                                    <span>Email:</span>
-                                    preventcovid_19@gmail.com
-                                </li>
-                                <li>
-                                    <i class="fa fa-map-marker"></i>
-                                    <span>Địa chỉ:</span>
-                                    Số 1, Đê La Thành, Hà Nội
-                                </li>
-                            </ul>
+                        <p>Chúng tôi xin cam kết sẽ đem lại những thông tin chính xác nhất và được cập nhật liên tục về
+                            dịch bệnh SARS-COV-2 trên Việt Nam và toàn thế giới.</p>
+                        <div class="social-links">
+                            <h6>Follow us</h6>
+                            <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
-            </div>
+                <div class="col-lg-3 offset-lg-1">
+                    <div class="footer-widget">
+                        <h5>Các bài viết</h5>
+                        <div class="footer-blog">
+                            <a href="phòng chống.html" class="fb-item">
+                                <h6>Cách hiệu quả phòng chống bệnh</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                            </a>
+                            <a href="phòng chống.html" class="fb-item">
+                                <h6>Làm sao để tránh bị ốm?</h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                            </a>
+                            <a href="phòng chống.html" class="fb-item">
+                                <h6>Làm sao để vượt qua stress ? </h6>
+                                <span class="blog-time"><i class="fa fa-clock-o"></i> Thứ 5,ngày 19,2020</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
-        </footer>
-        <!-- Footer Section End -->
+                <div class="col-lg-3">
+                    <div class="footer-widget">
+                        <h5>Liên hệ:</h5>
+                        <ul class="footer-info">
+                            <li>
+                                <i class="fa fa-phone"></i>
+                                <span>Số điện thoại:</span>
+                                None
+                            </li>
+                            <li>
+                                <i class="fa fa-envelope-o"></i>
+                                <span>Email:</span>
+                                None
+                            </li>
+                            <li>
+                                <i class="fa fa-map-marker"></i>
+                                <span>Địa chỉ:</span>
+                                Tầng 2,29T1, Hoàng Đạo Thúy, Hà Nội
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
+    <!-- Footer Section End -->
 
         <!-- Js Plugins -->
         <script src="js/jquery-3.3.1.min.js"></script>
