--- a/activar/test1.html
+++ b/activar/test1.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/test.css" type="text/css">
+    <link rel="stylesheet" href="./css/quiz.css" type="text/css">
 </head>
 
 <body>
@@ -76,6 +77,18 @@
                     </div>
                 </div>
                 <div class="slide1">
+                    <div class="quiz-container">
+                        <div id="quiz">
+                    </div>
+                            <button id="previous" style="margin-top:26%">Previous Question</button>
+                            <button id="next" style="margin-top:26%">Next Question</button>
+                            <button id="submit" style="margin-top:26%">Submit Quiz</button>
+                    </div>
+
+                    <div id="results" style="margin-top:20%"></div>
+                </div>
+
+                <!-- <div class="slide1">
                     <div>
                         <div class="quest">
                             <br>
@@ -113,16 +126,14 @@
                                 nước rửa tay khô?</h3>
                         </div>
                         <br>
-                        <button class="questbtn correct">A. Rửa tay dưới vòi nước với xà phòng là cách đơn giản và hiệu
-                            quả nhất</button>
+                        <button class="questbtn correct">A. Rửa tay dưới vòi nước với xà phòng là cách đơn giản và hiệu quả nhất</button>
                         <br>
                         <button class="questbtn wrong">B. Nước rửa tay khô/cồn khô tốt hơn</button>
                     </div>
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 5: Sau mỗi lần cầm nắm vật dụng thường được động chạm, có cần phải rửa tay ngay
-                                không?</h3>
+                            <h3>Câu 5: Sau mỗi lần cầm nắm vật dụng thường được động chạm, có cần phải rửa tay ngay không?</h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Có</button>
@@ -132,8 +143,7 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 6: Khi rửa tay có nhất thiết phải dùng các sản phẩm tiệt trùng không hay có thể rửa
-                                bằng xà phòng thường?</h3>
+                            <h3>Câu 6: Khi rửa tay có nhất thiết phải dùng các sản phẩm tiệt trùng không hay có thể rửa bằng xà phòng thường?</h3>
                         </div>
                         <br>
                         <button class="questbtn correct">A. Không nhất thiết dùng sản phẩm tiệt trùng</button>
@@ -143,8 +153,7 @@
                     <div>
                         <div class="quest">
                             <br>
-                            <h3>Câu 7: Khi ho đã che miệng nhưng không có điều kiện rửa tay ngay thì nên làm như thế nào
-                                khi tiếp xúc với người khác?</h3>
+                            <h3>Câu 7: Khi ho đã che miệng nhưng không có điều kiện rửa tay ngay thì nên làm như thế nào khi tiếp xúc với người khác?</h3>
                         </div>
                         <br>
                         <button class="questbtn wrong">A. Lau tay bằng giấy ăn</button>
@@ -188,7 +197,7 @@
                         <br>
                         <button class="questbtn wrong">B. Ghen</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -278,7 +287,8 @@
                             <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i
+                                    class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -341,6 +351,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/test.js"></script>
+    <script src="./js/quiz.js"></script>
 </body>
 
 </html>
