--- a/activar/test4.html
+++ b/activar/test4.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/test.css" type="text/css">
+    <link rel="stylesheet" href="./css/quiz.css" type="text/css">
 </head>
 
 <body>
@@ -76,6 +77,19 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="slide1">
+                    <div class="quiz-container">
+                        <div id="quiz">
+                    </div>
+                            <button id="previous" style="margin-top:26%">Previous Question</button>
+                            <button id="next" style="margin-top:26%">Next Question</button>
+                            <button id="submit" style="margin-top:26%">Submit Quiz</button>
+                    </div>
+
+                    <div id="results" style="margin-top:20%"></div>
+                </div>
+
                 <div class="slide1">
                     <div>
                         <div class="quest">
@@ -343,6 +357,7 @@
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/test.js"></script>
+    <script src="./js/quiz4.js"></script>
 </body>
 
 </html>
