chinh phan quiz

--- a/activar/test2.html
+++ b/activar/test2.html
@@ -88,9 +88,8 @@
 
                     <div id="results" style="margin-top:20%"></div>
                 </div>
-
-                
-                <div class="slide1">
+               
+                <!-- <div class="slide1">
                     <div>
                         <div class="quest">
                             <br>
@@ -202,7 +201,7 @@
                         <button class="questbtn wrong">B. Người bình thường ở nơi có nguy cơ lây lan cao như khi đi
                             phương tiện công cộng, đến bệnh viện</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
