--- a/activar/test4.html
+++ b/activar/test4.html
@@ -90,7 +90,7 @@
                     <div id="results" style="margin-top:20%"></div>
                 </div>
 
-                <div class="slide1">
+                <!-- <div class="slide1">
                     <div>
                         <div class="quest">
                             <br>
@@ -204,7 +204,7 @@
                         <br>
                         <button class="questbtn wrong">B. Chắc chắn là an toàn</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
