--- a/activar/test3.html
+++ b/activar/test3.html
@@ -90,7 +90,7 @@
                     </div>
 
                 </div>
-                <div class="slide1">
+                <!-- <div class="slide1">
                     <div>
                         <div class="quest">
                             <br>
@@ -197,7 +197,7 @@
                         <br>
                         <button class="questbtn wrong">B. Ít nhất 1m</button>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
