chinh file anh trong trieu chưng

--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -210,7 +210,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mix ">
+                <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
                         <img src="img/trieu-chung/moico.jpg" alt="">
                         <div class="gi-hover-warp">
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-sm-6 mix ">
+                <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
                         <img src="img/trieu-chung/somui.jpg" alt="">
                         <div class="gi-hover-warp">
@@ -235,7 +235,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-sm-6 mix ">
+                <div class="col-lg-4 col-sm-6 mix workout">
                     <div class="gallery-item">
                         <img src="img/trieu-chung/dauhong1.jpg" alt="">
                         <div class="gi-hover-warp">
