sua phan product

--- a/activar/product.html
+++ b/activar/product.html
@@ -84,24 +84,94 @@
     <!-- Product Showcase Begin -->
     <div class="wrapper">
         <div class="product-img">
-          <img src="http://bit.ly/2tMBBTd" height="420" width="327">
+            <img src="img/Product/khautrang.PNG" height="420" width="327">
         </div>
         <div class="product-info">
-          <div class="product-text">
-            <h1>Harvest Vase</h1>
-            <h2>by studio and friends</h2>
-            <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
-          </div>
-          <div class="product-price-btn">
-            <p><span>78</span>$</p>
-            <button type="button">buy now</button>
-          </div>
+            <div class="product-text">
+                <h1>Khẩu Trang</h1>
+                <h2>by PrvCv19</h2>
+                <p>Thiết kế 3D thoáng khí, giữ ấm không khí trước khi vào đường thở, làm giảm thiểu bệnh tai mũi họng không làm dính son môi lên khẩu trang đồng thời giúp ngăn khói bụi, giọt bắn, phấn hoa, virus trong không khí.</p>
+            </div>
+            <div class="product-price-btn">
+                <p><span>45.000</span>đ</p>
+                <br>
+                <button type="button" onclick="location.href='https://shopee.vn/Combo-10-C%C3%A1i-kh%E1%BA%A9u-trang-Su-ch%E1%BB%91ng-khu%E1%BA%A9n-ch%E1%BB%91ng-b%E1%BB%A5i-t%C3%A1i-s%E1%BB%AD-d%E1%BB%A5ng-nhi%E1%BB%81u-l%E1%BA%A7n-i.21084881.5720099136'">Mua ngay</button>
+            </div>
         </div>
-      </div>
+    </div>
+    <div class="wrapper">
+        <div class="product-img">
+            <img src="img/Product/xaphong.PNG" height="420" width="327">
+        </div>
+        <div class="product-info">
+            <div class="product-text">
+                <h1>Xà Phòng</h1>
+                <h2>by PrvCv19</h2>
+                <p>Giúp bảo bệ bạn và gia đình khỏi 10 loại bệnh gây hại sức khỏe lây truyền qua da với thành phần diệt khuẩn tiên tiến Active5. Bọt xà bông Lifebuoy sẽ giúp bạn có một làn da sạch sẽ và cảm giác sảng khoái. </p>
+            </div>
+            <div class="product-price-btn">
+                <p><span>15.000</span>đ</p>
+                <br>
+                <button type="button" onclick="location.href='https://tiki.vn/xa-bong-cuc-diet-khuan-lifebuoy-bao-ve-vuot-troi-21126123-125g-p460404.html?spid=168832&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.2045169324_Y.80760265868_V.168832_W.DT_A.773055584082&gclid=CjwKCAjwvOHzBRBoEiwA48i6ApJihxcFbtwg3S5Od1DoJXFGaqNTU_ekd40DFAWBA9_RgSag3p2lWRoC4oUQAvD_BwE'">Mua ngay</button>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="product-img">
+            <img src="img/Product/nuocsucmieng.png" height="420" width="327">
+        </div>
+        <div class="product-info">
+            <div class="product-text">
+                <h1>Nước Súc Miệng</h1>
+                <h2>by PrvCv19</h2>
+                <p>Giúp bảo vệ răng miệng toàn diện, ngừa mảng bám và giảm thiểu hôi miệng. Cho bạn tự tin với hơi thở thơm mát và hàm răng trắng sáng tạng rỡ.</p>
+            </div>
+            <div class="product-price-btn">
+                <p><span>219.000</span>đ</p>
+                <br>
+                <button type="button" onclick="location.href='https://tiki.vn/combo-2-nuoc-suc-mieng-huong-bac-ha-listerine-cool-mint-750ml-chai-p554282.html?src=search&2hi=0&keyword=n%C6%B0%E1%BB%9Bc%20s%C3%BAc%20mi%E1%BB%87ng&_lc=Vk4wMzQwMTMwMDM%3D'">Mua ngay</button>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="product-img">
+            <img src="img/Product/nhietke.jpg" height="420" width="327">
+        </div>
+        <div class="product-info">
+            <div class="product-text">
+                <h1>Nhiệt Kế</h1>
+                <h2>by PrvCv19</h2>
+                <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
+            </div>
+            <div class="product-price-btn">
+                <p><span>199.000</span>Đ</p>
+                <br>
+                <button type="button" onclick="location.href='https://tiki.vn/nhiet-ke-dien-tu-xiaomi-miaomiaoce-p15595597.html?spid=15595598&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.1057274772_Y.54169762056_V.15595598_W.DT_A.877516657142&gclid=CjwKCAjwvOHzBRBoEiwA48i6AgseW1e3NmFeVnJpFKhTdTzH93antCTa61yWE-fjHoClL88bt0Mw7BoCqJEQAvD_BwE'">Mua ngay</button>
+            </div>
+        </div>
+    </div>
+    <div class="wrapper">
+        <div class="product-img">
+            <img src="img/Product/nuocruatay.PNG" height="420" width="327">
+        </div>
+        <div class="product-info">
+            <div class="product-text">
+                <h1>Nước Rửa Tay</h1>
+                <h2>by PrvCv19</h2>
+                <p>Giúp làm sạch và dưỡng ẩm da tay, giúp chống lão hóa và nuôi dưỡng làn da. Ngăn ngừa nguy cơ lây lan dịch bệnh khi tiếp xúc hàng ngày.</p>
+            </div>
+            <div class="product-price-btn">
+                <p><span>59.000</span>đ</p>
+                <br>
+                <button type="button" onclick="location.href='https://www.pharmacity.vn/san-pham/nuoc-rua-tay-pharmacity-apple-kiwi-500ml/'">Mua ngay</button>
+            </div>
+        </div>
+    </div>
+      
       <!-- Product Showcase End -->
 
     <!-- Gallery Section Begin -->
-    <section class="gallery-section spad">
+    <!-- <section class="gallery-section spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -132,10 +202,10 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 mix">
                     <div class="gallery-item">
-                        <img src="img/Product/nhietke.PNG" alt="">
+                        <img src="img/Product/nhietke.jpg" alt="">
                         <div class="gi-hover-warp">
                             <div class="gi-hover">
-                                <a href="img/Product/nhietke.PNG" class="image-popup"><i
+                                <a href="img/Product/nhietke.jpg" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
                                 <a
                                     href="https://tiki.vn/nhiet-ke-dien-tu-xiaomi-miaomiaoce-p15595597.html?spid=15595598&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.1057274772_Y.54169762056_V.15595598_W.DT_A.877516657142&gclid=CjwKCAjwvOHzBRBoEiwA48i6AgseW1e3NmFeVnJpFKhTdTzH93antCTa61yWE-fjHoClL88bt0Mw7BoCqJEQAvD_BwE"><i
@@ -191,7 +261,7 @@
 
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Gallery Section End -->
 
     <!-- Footer Section Begin -->
